# Trabalho_CN

./: Newton.R  README.md  Trabalho Edinê.rar  quickSort.R
C - Mateus Tadeu/ParseInt/: ParseInt.layout
C - Mateus Tadeu/fibonacci/: fibonacci.depend  main.c
C - Mateus Tadeu/newton/: main.c  newton.cbp  newton.depend
C - Mateus Tadeu/pi/: main.c  pi.depend
C - Mateus Tadeu/piVetor/: main.c  piVetor.cbp  piVetor.depend
C - Mateus Tadeu/quicksort/: main.c  quicksort.depend
C# - Tares Orlande/: Program.cs  Trabalho Final CN.docx
Fortran - Mateus Maia/: Fibonacci.f95  Relatório - Fortran.docx  mandelbrot.f95  pi.f95  qSort.f95  string-int.f95
Haskell - Daniel Elias/Artigo/: sbc-template.aux  sbc-template.bbl  sbc-template.bib  sbc-template.blg  sbc-template.out  sbc-template.tex
Haskell - Daniel Elias/Codigo/: Fibonacci.hs  Main.hs  Mandel.hs  Newton.hs  Parse.hs  Pi.hs  (+1 more)
Haskell - Daniel Elias/Codigo/calculoNumerico/TrabalhoFinal/: TrabalhoFinal.cabal
Haskell - Daniel Elias/Codigo/calculoNumerico/TrabalhoFinal/src/: Main.hs
Java - Barbara/: Calculo Numerico - Barbara.doc  Fibonacci.java  MetododeNewton.java  PideEuler.java  QuickSort.java  Relátorio Barbara.doc
Lisp-Leandro/: ConsideracoesFinais  LISP - codigo e relatorio.docx  Outros Códigos interessantes  ParseInt  Trab  fibrecursivo.lsp  fibrecursivo1.lsp  quicksort.lsp
Perl - Pedro Afonso/: Trabalho Calculo Numérico - Perl.docx  fibonacci.pl  pisoma.pl  quicksort.pl  randmatstat.pl
R - Lais/: Mandelbrot.R  Matriz.R  ParseInt.R  fibonacci.R
Scilab - Matheus Saliba/: TestFunction.sce
(+103 files in other folders)
