name: TrabalhoFinal
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable TrabalhoFinal
    build-depends: QuickCheck -any, ansi-terminal -any, array -any,
                   base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
test-suite test-TrabalhoFinal
    build-depends: QuickCheck -any, ansi-terminal -any, array -any,
                   base -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src